kubernetes-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  labels:
    name: mongo
  namespace: ecommerce
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:3.0.4
        ports:
        - name: mongo
          containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
  namespace: ecommerce
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    name: mongo
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: neo4j
  labels:
    name: neo4j
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: neo4j
    spec:
      containers:
      - name: neo4j
        image: neo4j:2.3.0
        ports:
        - name: mongo
          containerPort: 7474
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    name: neo4j
  namespace: ecommerce
spec:
  ports:
  - port: 7474
    targetPort: 7474
  selector:
    name: neo4j
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-eureka
  labels:
    name: ms-eureka
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-eureka
    spec:
      containers:
      - name: ms-eureka
        image: philophilo/ms-eureka
        ports:
        - name: ms-eureka
          containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: ms-eureka
  labels:
    name: ms-eureka
  namespace: ecommerce
spec:
  ports:
  - port: 8761
    targetPort: 8761
  selector:
    name: ms-eureka
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-authserver
  labels:
    name: ms-authserver
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-authserver
    spec:
      containers:
      - name: ms-authserver
        image: philophilo/ms-authserver
        ports:
        - name: ms-authserver
          containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: ms-authserver
  labels:
    name: ms-authserver
  namespace: ecommerce
spec:
  ports:
  - port: 9999
    targetPort: 9999
  selector:
    name: ms-authserver
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-hystrix
  labels:
    name: ms-hystrix
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-hystrix
    spec:
      containers:
      - name: ms-hystrix
        image: philophilo/ms-hystrix
        ports:
        - name: ms-hystrix
          containerPort: 7979
---
apiVersion: v1
kind: Service
metadata:
  name: ms-hystrix
  labels:
    name: ms-hytrix
  namespace: ecommerce
spec:
  ports:
  - port: 7979
    targetPort: 7979
  selector:
    name: ms-hystrix
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-confserver
  labels:
    name: ms-confserver
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-confserver
    spec:
      containers:
      - name: ms-confserver
        image: philophilo/ms-confserver
        ports:
        - name: ms-confserver
          containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: ms-confserver
  labels:
    name: ms-confserver
  namespace: ecommerce
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    name: ms-confserver
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-catalog
  labels:
    name: ms-catalog
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-catalog
    spec:
      containers:
      - name: ms-catalog
        image: philophilo/ms-catalog
        ports:
        - name: ms-catalog
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ms-catalog
  labels:
    name: ms-catalog
  namespace: ecommerce
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: ms-catalog
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-reviews
  labels:
    name: ms-reviews
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-reviews
    spec:
      containers:
      - name: ms-reviews
        image: philophilo/ms-reviews
        ports:
        - name: ms-reviews
          containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ms-reviews
  labels:
    name: ms-reviews
  namespace: ecommerce
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    name: ms-reviews
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-recommend
  labels:
    name: ms-recommend
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-recommend
    spec:
      containers:
      - name: ms-recommend
        image: philophilo/ms-recommend
        ports:
        - name: ms-recommend
          containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ms-recommend
  labels:
    name: ms-recommend
  namespace: ecommerce
spec:
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    name: ms-recommend
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-orders
  labels:
    name: ms-orders
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-orders
    spec:
      containers:
      - name: ms-orders
        image: philophilo/ms-orders
        ports:
        - name: ms-orders
          containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: ms-orders
  labels:
    name: ms-orders
  namespace: ecommerce
spec:
  ports:
  - port: 8083
    targetPort: 8083
  selector:
    name: ms-orders
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ms-api-gateway
  labels:
    name: ms-api-gateway
  namespace: ecommerce
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ms-api-gateway
    spec:
      containers:
      - name: ms-api-gateway
        image: philophilo/ms-api-gateway
        ports:
        - name: ms-api-gateway
          containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ms-api-gateway
  labels:
    name: ms-api-gateway
  namespace: ecommerce
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    name: ms-api-gateway
  type: NodePort  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: ing.kube.philophilo.xyz
    http:
      paths:
        - path: /gateway
          backend:
            serviceName: ms-api-gateway
            servicePort: 8080
        - path: /orders
          backend:
            serviceName: ms-orders
            servicePort: 8083
        - path: /recommend
          backend:
            serviceName: ms-recommend
            servicePort: 8082
        - path: /reviews
          backend:
            serviceName: ms-review
            servicePort: 8081
        - path: /catalog
          backend:
            serviceName: ms-catalog
            servicePort: 8080
        - path: /confserver
          backend:
            serviceName: ms-confserver
            serviceport: 8888
        - path: /hystrix
          backend:
            serviceName: ms-hystrix
            servicePort: 7979
        - path: /authserver
          backend:
            serviceName: ms-authserver
            servicePort: 9999
        - path: /eureka
          backend:
	    serviceName: ms-eureka
            servicePort: 8761
        - path: /mongo
          backend:
            serviceName: mongo
            servicePort: 27017
        - path: /neo4j
          backend:
            serviceName: neo4j
            servicePort: 7474
